# pyvolgrid

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.txt  README.md  pyproject.toml  run_tests.py
.github/workflows/: build-wheels.yml  test.yml
src/cpp_src/: main.cpp  volgrid.cpp  volgrid.hpp
src/pyvolgrid/: __init__.py  _core.pyi
tests/: __init__.py  conftest.py  test_array_requirements.py  test_edge_cases.py  test_flexible_interface.py  test_input_validation.py  test_volume_calculation.py
