[project]
name = "pyvolgrid"
version = "0.1.0"
description = "Python package for estimating the total volume of overlapping spheres using a grid-based numerical approach."
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
authors = [
    { name = "Karl Gruber", email = "gammaturn@gmail.com" }
]
maintainers = [
    {name = "Karl Gruber", email = "gammaturn@gmail.com"},
]
keywords = ["molecular modeling", "structural bioinformatics", "computational chemistry", "volume calculation", "grid-based methods"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/ugSUBMARINE/pyvolgrid"
Documentation = "https://github.com/ugSUBMARINE/pyvolgrid#readme"
Repository = "https://github.com/ugSUBMARINE/pyvolgrid.git"
"Bug Tracker" = "https://github.com/ugSUBMARINE/pyvolgrid/issues"
Changelog = "https://github.com/ugSUBMARINE/pyvolgrid/releases"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.{h,c,hpp,cpp}" }, { file = "CMakeLists.txt" }]

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.11.0", "oldest-supported-numpy"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pybind11>=3.0.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]
